--- a/package.json
+++ b/package.json
@@ -20,9 +20,15 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@fortawesome/angular-fontawesome": "^0.12.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@popperjs/core": "^2.11.7",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.2.3",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.6.4",
+    "moment": "^2.29.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
